fix(homepage): video overlapping links

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -36,12 +36,23 @@
     display: none;
 }
 
+.home-hero iframe {
+    width: 100%;
+    height: 100%;
+
+    @media screen and (min-width: $lg_device) {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 150%; 
+    }
+}
+
 @media screen and (min-width: $lg_device) {
     .home-hero .image-iframe__wrapper {
         padding-top: 30%;
     }
-    .home-hero img,
-    .home-hero iframe {
+    .home-hero img {
         position: absolute;
         left: 0;
         top: 0;
